--- a/src/main/resources/fxml/index.fxml
+++ b/src/main/resources/fxml/index.fxml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.web.WebView?>
-<StackPane fx:id="indexStackPane"
-           xmlns="http://javafx.com/javafx/18"
-           xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="by.delfihealth.salov.glucoreader.fx.IndexController"
->
-    <children>
-        <WebView fx:id="indexWebView"/>
-    </children>
-</StackPane>
 
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.web.WebView?>
+
+
+<BorderPane xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.IndexController">
+   <center>
+      <StackPane fx:id="indexStackPane">
+          <children>
+              <WebView fx:id="indexWebView" />
+          </children>
+      </StackPane>
+   </center>
+   <top>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+   </top>
+   <bottom>
+      <VBox prefHeight="2.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
+   </bottom>
+</BorderPane>
