--- a/src/main/resources/fxml/window.fxml
+++ b/src/main/resources/fxml/window.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.web.WebView?>
 
-
-<StackPane fx:id="stackPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.WindowController">
-    <children>
+<StackPane fx:id="root" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.WindowController">
+<!--    <children>
         <WebView fx:id="webView" />
-    </children>
+    </children>-->
 </StackPane>
