--- a/src/main/resources/fxml/window.fxml
+++ b/src/main/resources/fxml/window.fxml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.web.WebView?>
 
-<StackPane fx:id="root" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.WindowController">
-<!--    <children>
-        <WebView fx:id="webView" />
-    </children>-->
-</StackPane>
+<BorderPane fx:id="root" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.WindowController">
+   <center>
+      <StackPane>
+          <children>
+              <WebView fx:id="webView" />
+          </children>
+      </StackPane>
+   </center>
+   <top>
+      <HBox fx:id="titleWindow"  BorderPane.alignment="CENTER" />
+   </top>
+</BorderPane>
