--- a/src/main/resources/fxml/window.fxml
+++ b/src/main/resources/fxml/window.fxml
@@ -7,7 +7,7 @@
 
 <BorderPane fx:id="root" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="by.delfihealth.salov.glucoreader.fx.WindowController">
    <center>
-      <StackPane>
+      <StackPane fx:id="pane">
           <children>
               <WebView fx:id="webView" />
           </children>
