Hide splash progress bar

--- a/src/main/resources/fxml/window.css
+++ b/src/main/resources/fxml/window.css
@@ -29,3 +29,9 @@
 #splashScreen {
       -fx-background-color: #344742;
 }
+
+#progressIndicator {
+      -fx-accent: #EAEAEA;
+      -fx-pref-height: 150;
+      -fx-pref-width: 150;
+}
