--- a/ui/src/components/Button.module.css
+++ b/ui/src/components/Button.module.css
@@ -1,15 +1,13 @@
 .button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       cursor: pointer;
-/*      border: none;*/
-      width: 57px;
-      height: 53px;
-
-      background: linear-gradient(99.54deg, #2B7568 7.46%, #355151 95.68%);
-      border: 1px solid rgba(95, 167, 167, 0.37);
-      border-radius: 14px;
-}
-
-.button:hover {
-      background: rgb(240, 240, 155) ;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background: #40B0A5;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+      width: 222px;
+      height: 100%;
 }
