--- a/ui/src/components/AllPatients/AllPatients.module.css
+++ b/ui/src/components/AllPatients/AllPatients.module.css
@@ -1,7 +1,9 @@
 .allPatients {
       background-color: #EAEAEA;
+      border: 5px solid black;
       display: flex;
       flex-direction: column;
       gap: 40px;
       padding: 50px 60px 50px 60px;
+      flex-grow: 10;
 }
