--- a/ui/src/components/AllPatients/AllPatientsNavBar.module.css
+++ b/ui/src/components/AllPatients/AllPatientsNavBar.module.css
@@ -2,11 +2,10 @@
       background-color: #EAEAEA;
       display: flex;
       align-items: center;
-      gap: 120px;
+      justify-content: space-between;
 }
 .button {
       width: 222px;
-
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 4px;
       border: none;
