--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -1,5 +1,27 @@
+@font-face {
+      font-family: "MyriadPro-Regular";   /*Can be any text*/
+      src: local("MyriadPro-Regular"),
+      url("../../fonts/MyriadPro-Regular.ttf") format("truetype");
+}
+
 .table {
       display: flex;
+      justify-content: space-around;
+      flex-direction: column;
       flex: 1;
-      background-color: coral;
+      background-color: #F9F9FC;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.tableRow {
+      display: flex;
+}
+
+.tableHeader {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #A7EEE1;
+      min-height:48px;
+      font-family: 'MyriadPro-Regular', sans-serif;
 }
