--- a/ui/src/components/Button.module.css
+++ b/ui/src/components/Button.module.css
@@ -1,13 +1,27 @@
+@font-face {
+      font-family: "MyriadPro-Regular";   /*Can be any text*/
+      src: local("MyriadPro-Regular"),
+      url("../fonts/MyriadPro-Regular.ttf") format("truetype");
+}
+
 .button {
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+      flex-direction: row-reverse;
       cursor: pointer;
       background: #40B0A5;
       border: none;
       border-radius: 4px;
       color: white;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-      width: 222px;
+      min-width: 200px;
       height: 100%;
+      font-family: 'MyriadPro-Regular', sans-serif;
+      font-size: 19px;
+      padding: 0 11px 0 11px;
+}
+
+.button svg {
+      font-size: 25px;
 }
