--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -1,27 +1,33 @@
 @font-face {
-      font-family: "MyriadPro-Regular";   /*Can be any text*/
-      src: local("MyriadPro-Regular"),
-      url("../../fonts/MyriadPro-Regular.ttf") format("truetype");
+      font-family: "MyriadPro-Semibold";   /*Can be any text*/
+      src: local("MyriadPro-Semibold"),
+      url("../../fonts/MyriadPro-Semibold.ttf") format("truetype");
 }
 
 .table {
       display: flex;
       justify-content: space-around;
-      flex-direction: column;
       flex: 1;
       background-color: #F9F9FC;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.tableRow {
+.column{
+      width: 100%;
       display: flex;
+      flex-direction: column;
+      border: solid 1px green;
 }
 
-.tableHeader {
+.columnHeader {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
+      padding-left: 10px;
       align-items: center;
       background-color: #A7EEE1;
       min-height:48px;
-      font-family: 'MyriadPro-Regular', sans-serif;
+      font-family: 'MyriadPro-Semibold', sans-serif;
+}
+.columnRow {
+
 }
