--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -4,30 +4,48 @@
       url("../../fonts/MyriadPro-Semibold.ttf") format("truetype");
 }
 
+@font-face {
+      font-family: "MyriadPro-Regular";   /*Can be any text*/
+      src: local("MyriadPro-Regular"),
+      url("../../fonts/MyriadPro-Regular.ttf") format("truetype");
+}
+
 .table {
       display: flex;
-      justify-content: space-around;
+      justify-content: flex-start;
       flex: 1;
       background-color: #F9F9FC;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .column{
-      width: 100%;
+/*      //width: max-content;*/
       display: flex;
       flex-direction: column;
-      border: solid 1px green;
+}
+
+.column:last-child {
+      flex-grow: 1;
 }
 
 .columnHeader {
       display: flex;
       justify-content: flex-start;
-      padding-left: 10px;
+      padding: 0 10px 0 10px;
       align-items: center;
       background-color: #A7EEE1;
       min-height:48px;
       font-family: 'MyriadPro-Semibold', sans-serif;
+      font-size: 12px;
 }
-.columnRow {
 
+.columnRow {
+      display: flex;
+      align-items: center;
+      min-height: 36px;
+      padding: 0 10px 0 10px;
+      font-family: 'MyriadPro-Regular', sans-serif;
+      font-size: 12px;
+      border-bottom: 1px solid #F0EFF6;
+      border-right: 1px solid #F0EFF6;
 }
