--- a/src/main/resources/fxml/window.css
+++ b/src/main/resources/fxml/window.css
@@ -35,3 +35,15 @@
       -fx-pref-height: 150;
       -fx-pref-width: 150;
 }
+
+.scroll-bar:vertical .thumb {
+      -fx-background-color: #BCBCC6 50% ;
+}
+
+
+.scroll-bar:vertical .track{
+      -fx-background-color :#F9F9FC;
+      -fx-border-color :transparent;
+      -fx-background-radius : 0;
+      -fx-border-radius : 0;
+}
