--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -39,6 +39,8 @@
 }
 
 .columnHeader {
+      top: 0;
+      position: sticky;
       display: flex;
       justify-content: flex-start;
       padding: 0 10px 0 10px;
