--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -40,7 +40,7 @@
 
 .columnHeader {
       top: 0;
-      position: sticky;
+      position: fixed;
       display: flex;
       justify-content: flex-start;
       padding: 0 10px 0 10px;
