--- a/ui/src/components/AllPatients/AllPatientsTable.module.css
+++ b/ui/src/components/AllPatients/AllPatientsTable.module.css
@@ -10,26 +10,27 @@
       url("../../fonts/MyriadPro-Regular.ttf") format("truetype");
 }
 
-
-
 .table {
       display: flex;
       justify-content: flex-start;
       flex: 1;
       background-color: #F9F9FC;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-      position: relative;  /* <------------------------- required */
+      position: relative; /* <------------------------- required */
 }
 
 .wrapper {
       display: flex;
-      position: absolute;  /* <------------------------- required */
-      left: 0; top: 0; right: 0; bottom: 0;  /* <------- required */
-      overflow-y: scroll;  /* <--------------------------- required */
+      position: absolute; /* <------------------------- required */
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0; /* <------- required */
+      overflow-y: scroll; /* <--------------------------- required */
 }
 
-.column{
-/*      //width: max-content;*/
+.column {
+      /*      //width: max-content;*/
       display: flex;
       flex-direction: column;
 }
@@ -40,13 +41,13 @@
 
 .columnHeader {
       top: 0;
-      position: fixed;
+      position: sticky;
       display: flex;
-      justify-content: flex-start;
+      /*justify-content: flex-start;*/
       padding: 0 10px 0 10px;
       align-items: center;
       background-color: #A7EEE1;
-      min-height:48px;
+      min-height: 48px;
       font-family: 'MyriadPro-Semibold', sans-serif;
       font-size: 12px;
 }
