--- a/ui/src/components/Input.module.css
+++ b/ui/src/components/Input.module.css
@@ -54,6 +54,7 @@
       cursor: pointer;
       display: flex;
       align-items: center;
+      justify-content: center;
       min-width: 18px;
 }
 
