--- a/ui/src/components/PatientResultsWindow/PatientResultsWindow.module.css
+++ b/ui/src/components/PatientResultsWindow/PatientResultsWindow.module.css
@@ -13,17 +13,12 @@
       flex-direction: column;
       flex: 1;
       height: 100%;
-      background-color: lightgreen;
 }
 .navBar {
       width: 100%;
-      background-color: royalblue;
       display: flex;
       align-items: center;
       justify-content: flex-start;
       gap: 45px;
-}
-
-.patientsResultTable {
-
+      padding-bottom: 40px;
 }
