--- a/ui/src/components/Button.module.css
+++ b/ui/src/components/Button.module.css
@@ -7,7 +7,7 @@
 .button {
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: baseline;
       flex-direction: row-reverse;
       cursor: pointer;
       background: #40B0A5;
