--- a/ui/src/components/Button.module.css
+++ b/ui/src/components/Button.module.css
@@ -7,7 +7,7 @@
 .button {
       display: flex;
       justify-content: space-between;
-      align-items: baseline;
+      align-items: center;
       flex-direction: row-reverse;
       cursor: pointer;
       background: #40B0A5;
@@ -21,7 +21,11 @@
       font-size: 16px;
       padding: 0 11px 0 11px;
 }
-
+.textWrapper {
+      display: flex;
+      justify-content: center;
+      padding-top: 3px;
+}
 .button svg {
       font-size: 25px;
 }
