--- a/ui/src/components/Input.module.css
+++ b/ui/src/components/Input.module.css
@@ -13,25 +13,33 @@
 .input {
       display: flex;
       justify-content: flex-start;
-      align-items: baseline;
+      align-items: center;
       height: 39px;
       gap: 20px;
       font-family: 'MyriadPro-Semibold-Italic', sans-serif;
       font-size: 16px;
+      line-height: 39px;
       color: black;
       white-space: nowrap;
+}
+.textInFrontWrapper {
+      padding-top: 4px;
 }
 .input input{
       font-family: 'MyriadPro-Regular', sans-serif;
       padding-top: 11px;
-      padding-bottom: 11px;
+      padding-bottom: 9px;
       width: 100%;
       outline: none;
       background: #FFFFFF;
       border: 1px solid #A1A2A4;
       border-radius: 4px;
-      font-size: 16px;
+      font-size: 1em;
+      line-height: 1.2;
       padding-left: 20px;
+}
+::placeholder {
+/*      transform: translateY(+2px);*/
 }
 
 .inputWrapper {
@@ -62,4 +70,5 @@
 .svgWrapper svg:hover {
       font-size: 18px;
 }
+
 
