--- a/ui/src/components/PatientResultsWindow/PatientResultColumn.module.css
+++ b/ui/src/components/PatientResultsWindow/PatientResultColumn.module.css
@@ -34,6 +34,24 @@
       min-height: 48px;
       font-family: 'MyriadPro-Semibold', sans-serif;
       font-size: 12px;
+      color: #484964;
+      cursor: pointer;
+}
+.columnHeaderActive {
+      top: 0;
+      position: sticky;
+      padding: 0 10px 0 10px;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+/*           white-space: pre-wrap;*/
+      background-color: #A7EEE1;
+      min-height: 48px;
+      font-family: 'MyriadPro-Semibold', sans-serif;
+      font-size: 12px;
+      color: #484964;
+      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+      z-index: 100;
       cursor: pointer;
 }
 
@@ -63,22 +81,7 @@
       font-size: 19px;
 }
 
-.columnHeaderActive {
-      top: 0;
-      position: sticky;
-      padding: 0 10px 0 10px;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-/*      white-space: pre-wrap;*/
-      background-color: #A7EEE1;
-      min-height: 48px;
-      font-family: 'MyriadPro-Semibold', sans-serif;
-      font-size: 12px;
-      box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-      z-index: 100;
-      cursor: pointer;
-}
+
 .columnRow {
       display: flex;
       align-items: center;
@@ -86,6 +89,7 @@
       padding: 0 10px 0 10px;
       font-family: 'MyriadPro-Regular', sans-serif;;
       font-size: 14px;
+      color: #484964;
       border-bottom: 1px solid #F0EFF6;
       border-right: 1px solid #F0EFF6;
       white-space: nowrap;
@@ -125,4 +129,29 @@
       border-bottom: 1px solid #F0EFF6;
       border-right: 1px solid #F0EFF6;
       white-space: nowrap;
+}
+
+.columnRowMark {
+      display: flex;
+      align-items: center;
+      height: 100%;
+      flex: 1;
+      gap: 24px;
+      font-family: 'MyriadPro-Regular', sans-serif;
+      color: #484964;
+}
+.markOfType {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20px;
+      width: 13px;
+}
+
+.checkMark {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 20px;
+      width: 13px;
 }
