--- a/ui/src/components/ChartsWindow/ChartsWindow.module.css
+++ b/ui/src/components/ChartsWindow/ChartsWindow.module.css
@@ -1,4 +1,42 @@
 .chartsWindow {
-      background: lightgoldenrodyellow;
+      background: #EAEAEA;
       width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      padding: 35px 50px 45px 50px;
+}
+.wrapper {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+      border: 1px solid green;
+}
+.navBar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      border: 1px solid black;
+      width: 100%;
+      gap: 15px;
+}
+
+.navBarRow {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border: 1px solid blue;
+      width: 100%;
+}
+
+.chartCard {
+      display: flex;
+      flex: 1;
+      width: 100%;
+      border: 1px solid red;
 }
