--- a/ui/src/components/ChartsWindow/ChartsWindow.module.css
+++ b/ui/src/components/ChartsWindow/ChartsWindow.module.css
@@ -34,6 +34,15 @@
       width: 100%;
 }
 
+.navBarButtonRow {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      border: 1px solid blue;
+      height: 39px;
+      width: 100%;
+}
+
 .chartCard {
       display: flex;
       flex: 1;
