--- a/ui/src/components/PrintWindow/PrintWindow.module.css
+++ b/ui/src/components/PrintWindow/PrintWindow.module.css
@@ -1,4 +1,7 @@
 .printWindow {
-      background: lightgoldenrodyellow;
+      background: #F5F5F5;
       width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 }
