--- a/ui/src/components/ChartsWindow/ChartsWindow.module.css
+++ b/ui/src/components/ChartsWindow/ChartsWindow.module.css
@@ -20,7 +20,7 @@
       flex-direction: column;
       height: 100%;
       width: 100%;
-      border: 1px solid green;
+      gap: 32px;
 }
 
 .chartCard {
@@ -29,8 +29,10 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      border: 1px solid red;
-      padding-top: 30px;
+      padding-top: 18px;
+      background: #FFFFFF;
+      border: 1px solid #A1A2A4;
+      border-radius: 4px;
 }
 
 .navBar {
@@ -38,7 +40,6 @@
       justify-content: space-between;
       align-items: center;
       flex-direction: column;
-      border: 1px solid black;
       width: 100%;
       gap: 15px;
 }
@@ -47,7 +48,6 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border: 1px solid blue;
       width: 100%;
 }
 
@@ -55,7 +55,6 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      border: 1px solid blue;
       height: 39px;
       width: 100%;
 }
