--- a/src/main/resources/fxml/window.css
+++ b/src/main/resources/fxml/window.css
@@ -15,7 +15,8 @@
 
 #root {
       -fx-background-color: white;
-      -fx-min-width: 1115;
+      -fx-pref-width: 1340;
+      -fx-min-width: 1340;
       -fx-min-height: 625;
 }
 
