--- a/ui/src/components/LineChart/LineChart.module.css
+++ b/ui/src/components/LineChart/LineChart.module.css
@@ -1,7 +1,10 @@
 .lineChart {
-      display: flex;
+/*      display: flex;
       flex: 1;
       height: 100%;
       background-color: lightcyan;
-      border-radius: 0 0 4px 4px;
+      border-radius: 0 0 4px 4px;*/
+      display: flex;
+      flex: 1;
+/*      border: 1px solid blue;*/
 }
