--- a/ui/src/components/ChartsWindow/ChartsWindow.module.css
+++ b/ui/src/components/ChartsWindow/ChartsWindow.module.css
@@ -30,11 +30,15 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding-top: 18px;
+
       background: #FFFFFF;
       border: 1px solid #A1A2A4;
       border-radius: 4px;
-      padding: 4px;
+      padding-top: 18px;
+      /* Выравнивание графика*/
+      padding-left: 8px;
+
+      padding-bottom: 4px;
 }
 
 .navBar {
