--- a/ui/src/components/ChartsWindow/LinearСhartCard.module.css
+++ b/ui/src/components/ChartsWindow/LinearСhartCard.module.css
@@ -30,7 +30,8 @@
 .legend {
       display: flex;
       flex-direction: column;
-      padding-left: 35px;
+      padding-left: 40px;
+/*      border: 1px solid red;*/
 }
 
 .legendTitle {
@@ -47,7 +48,6 @@
       display: flex;
       align-items: center;
       padding-top: 18px;
-      padding-bottom: 18px;
       gap: 50px;
 }
 
