--- a/ui/src/components/ChartsWindow/PieСhartCard.module.css
+++ b/ui/src/components/ChartsWindow/PieСhartCard.module.css
@@ -1,9 +1,8 @@
-.pieChart {
-      display: flex;
+.chartWrapper {
+/*      display: flex;
       justify-content: center;
       align-items: center;
       height: 100%;
-      flex: 1;
       background-color: yellowgreen;
-      border-radius: 4px;
+      border-radius: 4px;*/
 }
