Monday 10.04.2023 Pie chart 15:41

--- a/src/main/resources/fxml/window.css
+++ b/src/main/resources/fxml/window.css
@@ -45,8 +45,7 @@
 }
 
 .scroll-bar:vertical .track{
-      -fx-background-color :#F9F9FC;
-/*      -fx-background-color : lightgreen;*/
+      -fx-background-color :#EAEAEA;
       -fx-border-color :transparent;
       -fx-background-radius : 0;
       -fx-border-radius : 0;
@@ -61,7 +60,7 @@
 }
 
 .scroll-bar:horizontal .track{
-      -fx-background-color :#F9F9FC;
+      -fx-background-color :#EAEAEA;
       -fx-border-color :transparent;
       -fx-background-radius : 0;
       -fx-border-radius : 0;
