--- a/ui/src/components/Button.module.css
+++ b/ui/src/components/Button.module.css
@@ -16,7 +16,7 @@
       color: white;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
       min-width: 200px;
-      height: 100%;
+      height: 39px;
       font-family: 'MyriadPro-Regular', sans-serif;
       font-size: 16px;
       padding: 0 11px 0 11px;
@@ -27,6 +27,6 @@
       padding-top: 3px;
 }
 .button svg {
-      font-size: 25px;
+      font-size: 20px;
 }
 
