--- a/ui/src/components/PrintWindow/PrintWindow.module.css
+++ b/ui/src/components/PrintWindow/PrintWindow.module.css
@@ -87,7 +87,12 @@
 
 .leftColBody {
       display: flex;
-      height: 2000px;
+      flex-direction: column;
+      align-items: center;
+      height: content-box;
+      gap: 30px;
+      padding-top: 30px;
+      padding-bottom: 30px;
 }
 .rightCol {
       display: flex;
