--- a/ui/src/components/ChartsWindow/ChartsWindow.module.css
+++ b/ui/src/components/ChartsWindow/ChartsWindow.module.css
@@ -15,7 +15,7 @@
 }
 .wrapper {
       display: flex;
-      justify-content: space-between;
+      justify-content: start;
       align-items: center;
       flex-direction: column;
       height: 100%;
@@ -53,7 +53,7 @@
       padding-top: 18px;
       /* Выравнивание графика*/
 /*      padding-left: 8px;*/
-      padding-bottom: 4px;
+      padding-bottom: 18px;
 }
 
 .navBar {
