--- a/ui/src/components/PrintWindow/PrintDocumentCard.module.css
+++ b/ui/src/components/PrintWindow/PrintDocumentCard.module.css
@@ -1,3 +1,15 @@
+@font-face {
+      font-family: "MyriadPro-Semibold";   /*Can be any text*/
+      src: local("MyriadPro-Semibold"),
+      url("../../fonts/MyriadPro-Semibold.ttf") format("truetype");
+}
+
+@font-face {
+      font-family: "MyriadPro-Regular";   /*Can be any text*/
+      src: local("MyriadPro-Regular"),
+      url("../../fonts/MyriadPro-Regular.ttf") format("truetype");
+}
+
 .printDocumentCard {
       display: flex;
       flex-direction: column;
@@ -7,4 +19,44 @@
       max-height: 1240px;
       box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
       background-color: white;
+      align-items: center;
+      padding-top: 30px;
+      padding-bottom: 30px;
+
+}
+
+.printDocumentCardWrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+}
+
+.pageTitle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+}
+.pageTitleRow {
+      display: flex;
+      font-family: "MyriadPro-Regular", sans-serif;
+      color: black;
+      font-size: 18px;
+}
+.bold {
+      display: flex;
+      font-family: "MyriadPro-Semibold", sans-serif;
+      color: black;
+      font-size: 18px;
+}
+
+.pageRow {
+      display: flex;
+      width: 100%;
+      font-family: "MyriadPro-Regular", sans-serif;
+      color: black;
+      font-size: 18px;
+}
+
+.pageRowContent {
+      display: flex;
 }
