--- a/ui/src/components/AllPatientsWindow/AllPatientsNavBar.module.css
+++ b/ui/src/components/AllPatientsWindow/AllPatientsNavBar.module.css
@@ -11,5 +11,17 @@
       border: none;
 }
 
+.dropDownWrapper {
+      display: flex;
+      align-items: center;
+      font-family: 'MyriadPro-Semibold-Italic', sans-serif;
+      font-size: 16px;
+      gap: 6px;
+}
+.dropDownWrapperText {
+      padding-top: 12px;
+      padding-bottom: 8px;
+}
+
 
 
