--- a/ui/src/components/Dropdown.module.css
+++ b/ui/src/components/Dropdown.module.css
@@ -7,7 +7,9 @@
 .dropdown {
       min-width: 211px;
       width: 222px;
-      height: 40px;
+      height: 39px;
+      padding-top: 11px;
+      padding-bottom: 9px;
       font-family: 'MyriadPro-Regular', sans-serif;
       position: relative;
 }
@@ -17,7 +19,7 @@
       background: #FFFFFF;
       border-radius: 4px;
       border: 1px solid #A1A2A4;
-      height: 40px;
+      height: 39px;
       display: flex;
       align-items: center;
       justify-content: space-between;
@@ -38,7 +40,7 @@
 }
 
 .dropdownItem {
-      height: 41px;
+      height: 39px;
       display: flex;
       align-items: center;
       padding-left: 28px;
@@ -47,7 +49,7 @@
 }
 
 .dropdownItem:hover {
-      height: 41px;
+      height: 39px;
       background: rgba(167, 238, 225, 0.3);
       border-radius: 6px;
       display: flex;
